@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2023 Linux Studio Plugins Project <https://lsp-plug.in/>
- *           (C) 2023 Vladimir Sadovnikov <sadko4u@gmail.com>
+ * Copyright (C) 2025 Linux Studio Plugins Project <https://lsp-plug.in/>
+ *           (C) 2025 Vladimir Sadovnikov <sadko4u@gmail.com>
  *
  * This file is part of lsp-dsp-units
  * Created on: 20 мая 2016 г.
@@ -32,10 +32,36 @@ namespace lsp
     {
         enum meter_method_t
         {
+            /**
+             * Absolute maximum: max(fabsf(data[0..x]))
+             */
             MM_ABS_MAXIMUM,
+
+            /**
+             * Absolute minimum: min(fabsf(data[0..x]))
+             */
             MM_ABS_MINIMUM,
+
+            /**
+             * Sign-dependent minimum: (fabsf(pos) >= fabsf(neg)) ? pos : neg
+             *   where pos = fabsf(max(data[0..x], 0.0))
+             *     and neg = fabsf(min(data[0..x], 0.0))
+             */
             MM_SIGN_MAXIMUM,
+
+            /**
+             * Sign-dependent minimum: (fabsf(pos) < fabsf(neg)) ? pos : neg
+             *   where pos = fabsf(max(data[0..x], 0.0))
+             *     and neg = fabsf(min(data[0..x], 0.0))
+             */
             MM_SIGN_MINIMUM,
+
+            /**
+             * Varying extremum: (k % 2 == 0) ? max : min
+             *   where max = max(data[0..x])
+             *     and min = min(data[0..x])
+             */
+            MM_VAR_MINMAX,
         };
 
         class LSP_DSP_UNITS_PUBLIC MeterGraph
@@ -44,6 +70,7 @@ namespace lsp
                 ShiftBuffer         sBuffer;
                 float               fCurrent;
                 uint32_t            nCount;
+                uint32_t            nSampleId;
                 uint32_t            nPeriod;
                 meter_method_t      enMethod;
 
