@@ -44,6 +44,7 @@ namespace lsp
             fCurrent    = 0.0f;
             nCount      = 0;
             nPeriod     = 1;
+            nSampleId   = 0;
             enMethod    = MM_ABS_MAXIMUM;
         }
 
@@ -63,6 +64,7 @@ namespace lsp
             fCurrent    = 0.0f;
             nCount      = 0;
             nPeriod     = uint32_t(period);
+            nSampleId   = 0;
             return true;
         }
 
@@ -87,6 +89,13 @@ namespace lsp
                         fCurrent    = sample;
                     break;
 
+                case MM_VAR_MINMAX:
+                    if (nCount == 0)
+                        fCurrent    = sample;
+                    else
+                        fCurrent    = (nSampleId & 1) ? lsp_min(fCurrent, sample) : lsp_max(fCurrent, sample);
+                    break;
+
                 default:
                 case MM_ABS_MAXIMUM:
                     sample      = fabsf(sample);
@@ -100,7 +109,8 @@ namespace lsp
             {
                 // Append current sample to buffer
                 sBuffer.process(fCurrent);
-                nCount      = 0;
+                nCount     = 0;
+                ++nSampleId;
             }
         }
 
@@ -138,6 +148,24 @@ namespace lsp
                                 fCurrent        = sample;
                             break;
                         }
+                        case MM_VAR_MINMAX:
+                        {
+                            if (nSampleId & 1)
+                            {
+                                // Minimum
+                                const float sample  = dsp::min(s, can_do);
+                                if ((nCount == 0) || (fCurrent > sample))
+                                    fCurrent            = sample;
+                            }
+                            else
+                            {
+                                // Maximum
+                                const float sample  = dsp::max(s, can_do);
+                                if ((nCount == 0) || (fCurrent < sample))
+                                    fCurrent            = sample;
+                            }
+                            break;
+                        }
                         default:
                         case MM_ABS_MAXIMUM:
                         {
@@ -160,6 +188,7 @@ namespace lsp
                     // Append current sample to buffer
                     sBuffer.process(fCurrent);
                     nCount      = 0;
+                    ++nSampleId;
                 }
             }
         }
@@ -198,6 +227,24 @@ namespace lsp
                                 fCurrent        = sample;
                             break;
                         }
+                        case MM_VAR_MINMAX:
+                        {
+                            if (nSampleId & 1)
+                            {
+                                // Minimum
+                                const float sample  = dsp::min(s, can_do) * gain;
+                                if ((nCount == 0) || (fCurrent > sample))
+                                    fCurrent            = sample;
+                            }
+                            else
+                            {
+                                // Maximum
+                                const float sample  = dsp::max(s, can_do) * gain;
+                                if ((nCount == 0) || (fCurrent < sample))
+                                    fCurrent            = sample;
+                            }
+                            break;
+                        }
                         default:
                         case MM_ABS_MAXIMUM:
                         {
@@ -220,6 +267,7 @@ namespace lsp
                     // Append current sample to buffer
                     sBuffer.process(fCurrent);
                     nCount      = 0;
+                    ++nSampleId;
                 }
             }
         }
@@ -231,6 +279,7 @@ namespace lsp
             v->write("nCount", nCount);
             v->write("nPeriod", nPeriod);
             v->write("enMethod", enMethod);
+            v->write("nSampleId", nSampleId);
         }
     } /* namespace dspu */
 } /* namespace lsp */
